--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ ul {
     display: flex;
     position: fixed;
     width: 100%;
-    z-index: 998;
+    z-index: 999;
     -webkit-backdrop-filter: blur(100px);
     backdrop-filter: blur(100px);
 }
@@ -136,6 +136,10 @@ ul {
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
+}
+
+.header-forms {
+    z-index: 998;
 }
 
 .header-form {
